ソースコードの追記

--- a/src/app/sidebar/app.sidebar.scss
+++ b/src/app/sidebar/app.sidebar.scss
@@ -16,7 +16,7 @@
 }
 
 .sidebar ul li:hover {
-  background-color: darkblue;
+  background-color: lightskyblue;
   border-radius: 15px;
   transition-duration: 0.5s;
 }
